# amqp-cpp-asio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: receiver.cpp  sender.cpp
pkg-config/: amqpasio.pc.in
src/: AmqpConnectionHandler.cpp  AmqpConnectionHandler.hpp  AmqpConnector.cpp  AmqpConnector.hpp  AmqpJsonConverter.cpp  AmqpJsonConverter.hpp  AmqpTransceiver.cpp  AmqpTransceiver.hpp  AutoReconnect.cpp  AutoReconnect.hpp
